# eosdt-ibc

./: .gitignore  Dockerfile  LICENSE  README.md
contracts/: .gitignore  CMakeLists.txt  README.md  hydra.yml  package-lock.json  package.json
contracts/actions/: _helpers.js  addreporter.js  clear-reports.js  clear-transfers.js  enable.js  issuefees.js  rmreporter.js  transfer-eosdt.js  update.js
contracts/actions/setup/: ibc.js  issue-eosdt.js  token.js
contracts/eosio.contracts/eosio.token/: CMakeLists.txt  eosio.token.hpp
contracts/reporteribc/: reporteribc.cpp  reporteribc.hpp  utils.hpp
contracts/tests/: reporteribc.test.js
contracts/tests/fixtures/eosio.token/: accounts.json  stat.json
reporter/: .gitignore  .template.env  .template.env-docker  README.md  ecosystem.config.js  package-lock.json  package.json  run.sh  tsconfig.json
reporter/src/: dotenv.ts  index.ts  reporter.ts  routes.ts  types.ts
reporter/src/controller/: HealthController.ts  LogController.ts
reporter/src/eos/: api.ts  fetch.ts  networks.ts  types.ts
reporter/src/logger/: index.ts
reporter/src/utils/: health.ts  index.ts  promise.ts
reporter/src/views/: reports.html
